crates/ty_python_semantic/resources/mdtest/snapshots/unsafe_tuple_subclas…_-_Unsafe_Tuple_Subclas…_-_`__len__`_(6578ba38e9902819).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---
---
mdtest name: unsafe_tuple_subclass.md - Unsafe Tuple Subclass - `__len__`
mdtest path: crates/ty_python_semantic/resources/mdtest/unsafe_tuple_subclass.md
---

# Python source files

## mdtest_snippet.py

```
 1 | class A(tuple):
 2 |     # error: [unsafe-tuple-subclass]
 3 |     def __len__(self):
 4 |         return 0
 5 | 
 6 | class B(tuple):
 7 |     # error: [unsafe-tuple-subclass]
 8 |     __len__ = None
 9 | 
10 | class C(tuple):
11 |     # error: [unsafe-tuple-subclass]
12 |     __len__ = lambda self: 0
13 | 
14 | class D(tuple): ...
15 | 
16 | class E(D):
17 |     # error: [unsafe-tuple-subclass]
18 |     def __len__(self):
19 |         return 0
```

# Diagnostics

```
warning[unsafe-tuple-subclass]: Unsafe override of method `__len__` in a subclass of `tuple`
 --> src/mdtest_snippet.py:3:9
  |
1 | class A(tuple):
2 |     # error: [unsafe-tuple-subclass]
3 |     def __len__(self):
  |         ^^^^^^^^^^^^^
4 |         return 0
  |
help: Overriding method `__len__` in a subclass of `tuple` can cause unexpected behavior
info: rule `unsafe-tuple-subclass` is enabled by default

```

```
warning[unsafe-tuple-subclass]: Unsafe override of method `__len__` in a subclass of `tuple`
  --> src/mdtest_snippet.py:8:5
   |
 6 | class B(tuple):
 7 |     # error: [unsafe-tuple-subclass]
 8 |     __len__ = None
   |     ^^^^^^^^^^^^^^
 9 |
10 | class C(tuple):
   |
help: Overriding method `__len__` in a subclass of `tuple` can cause unexpected behavior
info: rule `unsafe-tuple-subclass` is enabled by default

```

```
warning[unsafe-tuple-subclass]: Unsafe override of method `__len__` in a subclass of `tuple`
  --> src/mdtest_snippet.py:12:5
   |
10 | class C(tuple):
11 |     # error: [unsafe-tuple-subclass]
12 |     __len__ = lambda self: 0
   |     ^^^^^^^^^^^^^^^^^^^^^^^^
13 |
14 | class D(tuple): ...
   |
help: Overriding method `__len__` in a subclass of `tuple` can cause unexpected behavior
info: rule `unsafe-tuple-subclass` is enabled by default

```

```
warning[unsafe-tuple-subclass]: Unsafe override of method `__len__` in a subclass of `tuple`
  --> src/mdtest_snippet.py:18:9
   |
16 | class E(D):
17 |     # error: [unsafe-tuple-subclass]
18 |     def __len__(self):
   |         ^^^^^^^^^^^^^
19 |         return 0
   |
help: Overriding method `__len__` in a subclass of `tuple` can cause unexpected behavior
info: rule `unsafe-tuple-subclass` is enabled by default

```
